<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.cat.olga</groupId>
  <artifactId>avro-avromapreduce</artifactId>
  <packaging>jar</packaging>
  <version>1.0-SNAPSHOT</version>
  <name>avro-avromapreduce</name>
  <url>http://maven.apache.org</url>

  <properties>
    <profile>local</profile>
    <env>dhruvk</env>
    <cdh.hadoop.version>2.5.0-cdh5.3.2</cdh.hadoop.version>
    <cdh.oozie.version>4.0.0-cdh5.3.2</cdh.oozie.version>
    <cdh.hive.version>0.13.1-cdh5.3.2</cdh.hive.version>
  </properties>

  <profiles>
    <profile>
      <id>dhruvk</id>
      <build>
        <filters>
          <filter>env/dhruvk.properties</filter>
        </filters>
      </build>
    </profile>
  </profiles>

  <repositories>
    <repository>
      <id>cloudera</id>
      <url>https://repository.cloudera.com/artifactory/cloudera-repos/</url>
    </repository>
  </repositories>

  <build>
    <resources>
      <resource>
        <directory>src/main/resources</directory>
        <filtering>true</filtering>
      </resource>
    </resources>
    <plugins>
      <plugin>
        <groupId>org.apache.avro</groupId>
        <artifactId>avro-maven-plugin</artifactId>
        <version>1.7.7</version>
        <executions>
          <execution>
            <phase>generate-sources</phase>
            <goals>
              <goal>schema</goal>
            </goals>
            <configuration>
              <sourceDirectory>${project.basedir}/src/main/java/com/cat/olga/avro</sourceDirectory>
              <outputDirectory>${project.basedir}/src/main/java/com/cat/olga/models/</outputDirectory>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.10</version>
        <configuration>
          <argLine>-XX:MaxPermSize=256M -XX:-UseSplitVerifier</argLine>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.1</version>
        <configuration>
          <source>1.7</source>
          <target>1.7</target>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-assembly-plugin</artifactId>
        <version>2.4</version>
        <configuration>
          <filters>
            <filter>${basedir}/env/${profile}.properties</filter>
          </filters>
          <descriptorRefs>
            <descriptorRef>jar-with-dependencies</descriptorRef>
          </descriptorRefs>
          <descriptors>
            <descriptor>workflow-package.xml</descriptor>
          </descriptors>
        </configuration>
        <executions>
          <execution>
            <id>package</id>
            <goals>
              <goal>single</goal>
            </goals>
            <phase>package</phase>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>com.hivemigrator.plugin</groupId>
        <artifactId>HiveMigrator</artifactId>
        <version>1.0-SNAPSHOT</version>
        <configuration>
          <propertiesFile>${basedir}/../env/${env}.properties</propertiesFile>

          <hiveDeltaDirectory>../setup/hive</hiveDeltaDirectory>
          <impalaDeltaDirectory>../setup/impala</impalaDeltaDirectory>
          <cognosChangeLogTableDirectory>/projects/olga/data/table/${devName}/migrations/cognos
          </cognosChangeLogTableDirectory>
          <cognosDatabaseName>${devName}_cognos</cognosDatabaseName>
          <cognosDeltaDirectory>../setup/cognos</cognosDeltaDirectory>
          <oracleDeltaDirectory>../setup/oracle/migration</oracleDeltaDirectory>
          <seedOracleDeltaDirectory>../setup/oracle/seed</seedOracleDeltaDirectory>
          <mySqlDeltaDirectory>../setup/mysql/migration</mySqlDeltaDirectory>
          <seedMySqlDir>../setup/mysql/seed</seedMySqlDir>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <dependencies>
    <dependency>
      <groupId>org.apache.avro</groupId>
      <artifactId>avro</artifactId>
      <version>1.7.7</version>
    </dependency>
    <dependency>
      <groupId>org.apache.avro</groupId>
      <artifactId>avro-mapred</artifactId>
      <version>1.7.7</version>
      <classifier>hadoop2</classifier>
    </dependency>

    <dependency>
      <groupId>joda-time</groupId>
      <artifactId>joda-time</artifactId>
      <version>2.3</version>
    </dependency>

    <dependency>
      <groupId>org.apache.hadoop</groupId>
      <artifactId>hadoop-common</artifactId>
      <version>2.5.0-cdh5.3.2</version>
    </dependency>
    <dependency>
      <groupId>org.apache.hadoop</groupId>
      <artifactId>hadoop-mapreduce-client-core</artifactId>
      <version>2.5.0-cdh5.3.2</version>
    </dependency>

    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>3.8.1</version>
      <scope>test</scope>
    </dependency>

  </dependencies>
</project>
